# CD-Rocketry

./: .gitignore  LICENSE.md  README.md  check_gpu.py  main.py  pyproject.toml  smoke_test.py
rocketsim/: __init__.py  aerodynamics.py  atmosphere.py  ml_surrogate.py  monte_carlo.py  motor.py  simulator.py
tests/: test_smoke.py
