[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cd-rocketry"
version = "1.0.0"
description = "Physics-first model rocket flight simulator with Monte Carlo and surrogate modeling."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.md"}
dependencies = [
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/reverez/CD-Rocketry"
Repository = "https://github.com/reverez/CD-Rocketry"

[tool.setuptools.packages.find]
include = ["rocketsim*"]
